Fix overflow

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,7 @@
+html {
+  overflow: hidden;
+}
+
 body {
   font-size: 90px;
 }
